fix: grid display on mobile - kfokam48 login clone

--- a/kfokam_login_clone/styles.css
+++ b/kfokam_login_clone/styles.css
@@ -361,7 +361,7 @@ li {
   }
 
   .image-container {
-    grid-column: 1 / span 12;
+    grid-column: 1;
     grid-row: 1;
     height: 100vh;
   }
